--- a/Src/Couchbase.Data.Example/Views/Home/Index.cshtml
+++ b/Src/Couchbase.Data.Example/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Couchbase.Data.Tests.Documents.Beer>
+﻿@model IEnumerable<Couchbase.Data.Example.Models.DTOs.Beer>
 
 @{
     ViewBag.Title = "Index";
@@ -12,28 +12,13 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Type)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Abv)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Ibu)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Srm)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Upc)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.BreweryId)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Abv)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Style)
@@ -47,28 +32,13 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Type)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
+            @Html.DisplayFor(model => item.BreweryId)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Abv)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ibu)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Srm)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Upc)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BreweryId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Style)
@@ -77,9 +47,9 @@
             @Html.DisplayFor(modelItem => item.Category)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new {  id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new {  id=item.Id })
         </td>
     </tr>
 }
