--- a/Src/Couchbase.Data.Example/Views/Home/Delete.cshtml
+++ b/Src/Couchbase.Data.Example/Views/Home/Delete.cshtml
@@ -1,8 +1,105 @@
-﻿@model dynamic
+﻿@model Couchbase.Data.Example.Models.DTOs.Beer
 
 @{
-    ViewBag.Title = "title";
-    Layout = "_Layout";
+    ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>title</h2>
+<h2>Delete</h2>
+
+<h3>Are you sure you want to delete this?</h3>
+<div>
+    <h4>Beer</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Type)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Type)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Abv)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Abv)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Ibu)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Ibu)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Srm)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Srm)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Upc)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Upc)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.BreweryId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BreweryId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Style)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Style)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Category)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Category)
+        </dd>
+
+    </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
+</div>
