Added error handling

--- a/Src/Couchbase.Data.Example/Views/Home/Details.cshtml
+++ b/Src/Couchbase.Data.Example/Views/Home/Details.cshtml
@@ -76,6 +76,12 @@
             <dd>
                 @Html.DisplayFor(model => model.Category)
             </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Updated)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Updated)
+            </dd>
         </dl>
     </div>
     <p>
