--- a/Src/Couchbase.Data.Example/Views/Home/Delete.cshtml
+++ b/Src/Couchbase.Data.Example/Views/Home/Delete.cshtml
@@ -6,11 +6,17 @@
 }
 
 <h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Beer</h4>
     <hr />
+    @if (ViewBag.Error != null)
+    {
+        <div class="isa_error">
+            <i class="fa fa-times-circle"></i>
+            Error: @ViewBag.Error
+        </div>
+    }
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Type)
